SQuirreL SQL Client Change Log
==============================

Not yet released, available in our GIT repository and in snapshots and future releases.
===============================================================================================

Enhancements:

SQL result's find function: New option to color rows with matches.

Improved import file dialog UI: When an import table is preselected a new label above the "Suggest new table"
  button is explains:
  "Inserting into table '<preselected import table>'. To create a new table instead click 'Suggest new table'."

When reading data from a column of type NCLOB the same rules are applied
  as when columns of type CLOB are read.
  See menu File --> Global Preference --> tab "Data Type Controls"

When the Object tree is searched the Session's status displays a progress bar with a stop button.

New Plugin "High resolution icon"
  Provides high resolution icons for  HiDPI screens.
  Thanks to Stanimir Stamenkov for merge request #80 on which this Plugin is based.

Merge Request #81: Show selected Alias's JDBC URL in the main window's status bar
  Thanks to Stanimir Stamenkov for the merge request.

SQL Result: The "Mark duplicates ..." function has two new  modes:
   - Duplicate cells in row
   - Duplicate consecutive cells in row
  Improved switching between lighter and darker duplicate color.

Merge Request #78 Derby Plugin: When the Derby Plugin is installed it sets the JVM property derby.system.home
  to the Plugin's user directory which is <SQUIRREL_USER_DIR>/plugins/derby/.
  Users may change this default by setting the property in SQuirrel's start script.
  Thanks to Stanimir Stamenkov for the merge request.

Merge Request #77 Improved layout and Look & Feel compatibility for several components
  including but not limited to: Status bar, top panel of SQL results, about dialog.
  Thanks to Stanimir Stamenkov for the merge request.
