@@ -76,6 +76,7 @@ TableCopyAsMarkdownCommand.failed.to.copy=Copy as markdown failed because of mis
 
 TablePopupMenu.CopySelectedRowsToOwnWindow=Copy selected rows to new window
 TablePopupMenu.ColorSelectedRows=Color selected rows
+TablePopupMenu.ColorSelectedCells=Color selected cells
 TablePopupMenu.GotoColor=Go to color
 TablePopupMenu.CopyColoredRowsToNewWindow=Copy colored rows to new window
 
