@@ -1,0 +1,7 @@
+package net.sourceforge.squirrel_sql.fw.gui.action.colorrows;
+
+public enum ColorSelectionType
+{
+   ROWS,
+   CELLS
+}
